--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
+    "lorem-ipsum": "^2.0.8",
     "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
