--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "aws-sdk": "^2.1481.0",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "lorem-ipsum": "^2.0.8",
     "next": "13.5.6",
